--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Backtesting vs. Real-Time: Why Your Ideas Fail #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">17 minutes ago</div>
+                        <div class="date">32 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>🔴 Battlefield 6 BATTLE ROYALE IS HERE!</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1439,9 +1439,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=QGvCx6WizDc" target="_blank">
-                    <img src="https://i.ytimg.com/vi/QGvCx6WizDc/mqdefault.jpg" alt="An information factor: what are skilled investors buying and selling?">
+                    <img src="https://i.ytimg.com/vi/QGvCx6WizDc/mqdefault.jpg" alt="Information Trading Strategy (Backtested)">
                     <div class="video-info">
-                        <h3>An information factor: what are skilled investors buying and selling?</h3>
+                        <h3>Information Trading Strategy (Backtested)</h3>
                         <div class="channel">Quantified Strategies</div>
                         <div class="date">2 weeks ago</div>
                     </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Backtesting vs. Real-Time: Why Your Ideas Fail #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">17 minutes ago</div>
+                            <div class="date">32 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5607,9 +5607,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=QGvCx6WizDc" target="_blank">
-                        <img src="https://i.ytimg.com/vi/QGvCx6WizDc/mqdefault.jpg" alt="An information factor: what are skilled investors buying and selling?">
+                        <img src="https://i.ytimg.com/vi/QGvCx6WizDc/mqdefault.jpg" alt="Information Trading Strategy (Backtested)">
                         <div class="video-info">
-                            <h3>An information factor: what are skilled investors buying and selling?</h3>
+                            <h3>Information Trading Strategy (Backtested)</h3>
                             <div class="channel">Quantified Strategies</div>
                             <div class="date">2 weeks ago</div>
                         </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>🔴 Battlefield 6 BATTLE ROYALE IS HERE!</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
