--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Sidemen’s Biggest Clutch!</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -9594,7 +9594,7 @@
                         <div class="video-info">
                             <h3>Sidemen’s Biggest Clutch!</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
