--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Scooping the pizzas , pizza peel technique #pizzalover #pizza #streetfood #food</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">28 minutes ago</div>
+                        <div class="date">36 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Changing the Dynamics of Challenge, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Why You Can’t Afford to Bank That Winning Trade 💭</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>Why You Can’t Afford to Bank That Winning Trade 💭</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Changing the Dynamics of Challenge, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Scooping the pizzas , pizza peel technique #pizzalover #pizza #streetfood #food</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">28 minutes ago</div>
+                            <div class="date">36 minutes ago</div>
                         </div>
                     </a>
                 </div>
